force-app/main/default/objects/GLW_Order__c/fields/GLW_Customer__c.field-meta.xml
<CustomField>
    <fullName>GLW_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>