force-app/main/default/objects/GLW_Order__c/fields/GLW_FlagOverdue__c.field-meta.xml
<CustomField>
    <fullName>GLW_FlagOverdue__c</fullName>
    <label>Flag Overdue</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>