force-app/main/default/objects/GLW_Order__c/fields/GLW_OrderDate__c.field-meta.xml
<CustomField>
    <fullName>GLW_OrderDate__c</fullName>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>