force-app/main/default/objects/GLW_Order__c/fields/GLW_Qualtity__c.field-meta.xml
<CustomField>
    <fullName>GLW_Qualtity__c</fullName>
    <label>Qualtity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>