force-app/main/default/objects/GLW_Order__c/fields/GLW_Total__c.field-meta.xml
<CustomField>
    <fullName>GLW_Total__c</fullName>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>