force-app/main/default/objects/GLW_Order__c/fields/GLW_WeatherCity__c.field-meta.xml
<CustomField>
    <fullName>GLW_WeatherCity__c</fullName>
    <label>Weather City</label>
    <length>128</length>
    <type>Text</type>
</CustomField>