force-app/main/default/objects/GLW_Order__c/fields/GLW_WeatherDescription__c.field-meta.xml
<CustomField>
    <fullName>GLW_WeatherDescription__c</fullName>
    <label>Weather Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>