force-app/main/default/objects/GLW_Order__c/fields/GLW_WeatherLastUpdated__c.field-meta.xml
<CustomField>
    <fullName>GLW_WeatherLastUpdated__c</fullName>
    <label>Weather Last Updated</label>
    <type>DateTime</type>
</CustomField>