force-app/main/default/objects/GLW_Order__c/fields/GLW_WeatherTemperature__c.field-meta.xml
<CustomField>
    <fullName>GLW_WeatherTemperature__c</fullName>
    <label>Weather Temperature (C)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>